# openapi.yaml
@@ -18,7 +18,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/helloworld.v1.AddMiniProgramRequest'
+                            $ref: '#/components/schemas/pbWxBase.AddMiniProgramRequest'
                 required: true
             responses:
                 "200":
@@ -26,7 +26,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.AddMiniProgramReply'
+                                $ref: '#/components/schemas/pbWxBase.AddMiniProgramReply'
     /v1/official_account:
         get:
             tags:
@@ -39,7 +39,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.GetOfficialAccountListReply'
+                                $ref: '#/components/schemas/pbWxBase.GetOfficialAccountListReply'
         put:
             tags:
                 - OfficialAccount
@@ -49,7 +49,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/helloworld.v1.UpdateOfficialAccountRequest'
+                            $ref: '#/components/schemas/pbWxBase.UpdateOfficialAccountRequest'
                 required: true
             responses:
                 "200":
@@ -57,19 +57,19 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.UpdateOfficialAccountReply'
+                                $ref: '#/components/schemas/pbWxBase.UpdateOfficialAccountReply'
         post:
             tags:
                 - OfficialAccount
             description: |-
                 ------------ internal ----------
                  添加公众号
-            operationId: OfficialAccount_AddOfficialAccount
+            operationId: OfficialAccount_CreateOfficialAccount
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/helloworld.v1.AddOfficialAccountRequest'
+                            $ref: '#/components/schemas/pbWxBase.CreateOfficialAccountRequest'
                 required: true
             responses:
                 "200":
@@ -77,7 +77,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.AddOfficialAccountReply'
+                                $ref: '#/components/schemas/pbWxBase.CreateOfficialAccountReply'
         delete:
             tags:
                 - OfficialAccount
@@ -89,7 +89,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.DeleteOfficialAccountReply'
+                                $ref: '#/components/schemas/pbWxBase.DeleteOfficialAccountReply'
     /v1/wx/openid:
         get:
             tags:
@@ -117,13 +117,13 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.GetOpenidByCodeReply'
+                                $ref: '#/components/schemas/pbWxBase.GetOpenidByCodeReply'
     /wx/new:
         get:
             tags:
                 - OfficialAccount
             description: 微信回调
-            operationId: OfficialAccount_WxCallback
+            operationId: OfficialAccount_WxCallbackGet
             parameters:
                 - name: signature
                   in: query
@@ -141,23 +141,57 @@ paths:
                   in: query
                   schema:
                     type: string
+                - name: customer
+                  in: query
+                  schema:
+                    type: string
+                - name: wxPlatform
+                  in: query
+                  schema:
+                    type: string
+                - name: appId
+                  in: query
+                  schema:
+                    type: string
+                - name: MsgType
+                  in: query
+                  description: 消息类型
+                  schema:
+                    type: string
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.WxCallbackReply'
+                                $ref: '#/components/schemas/pbWxBase.WxCallbackReply'
+        post:
+            tags:
+                - OfficialAccount
+            operationId: OfficialAccount_WxCallbackPost
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/pbWxBase.WxCallbackRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/pbWxBase.WxCallbackReply'
 components:
     schemas:
-        helloworld.v1.AddMiniProgramReply:
+        pbWxBase.AddMiniProgramReply:
             type: object
             properties: {}
-        helloworld.v1.AddMiniProgramRequest:
+        pbWxBase.AddMiniProgramRequest:
             type: object
             properties: {}
             description: AddMiniProgram 方法 添加小程序
-        helloworld.v1.AddOfficialAccountReply:
+        pbWxBase.CreateOfficialAccountReply:
             type: object
             properties:
                 name:
@@ -165,10 +199,14 @@ components:
                 Id:
                     type: integer
                     format: int64
-        helloworld.v1.AddOfficialAccountRequest:
+                message:
+                    type: string
+        pbWxBase.CreateOfficialAccountRequest:
             type: object
             properties:
                 name:
+                    type: string
+                customer:
                     type: string
                 appId:
                     type: string
@@ -178,18 +216,20 @@ components:
                     type: string
                 encodingAesKey:
                     type: string
-                tokenUrl:
+                url:
+                    type: string
+                jsToken:
                     type: string
                 appIdAlias:
                     type: string
-            description: AddOfficialAccount 方法 添加公众号
-        helloworld.v1.DeleteOfficialAccountReply:
+            description: CreateOfficialAccount 方法 添加公众号
+        pbWxBase.DeleteOfficialAccountReply:
             type: object
             properties: {}
-        helloworld.v1.GetOfficialAccountListReply:
+        pbWxBase.GetOfficialAccountListReply:
             type: object
             properties: {}
-        helloworld.v1.GetOpenidByCodeReply:
+        pbWxBase.GetOpenidByCodeReply:
             type: object
             properties:
                 ret:
@@ -198,26 +238,46 @@ components:
                 msg:
                     type: string
                 data:
-                    $ref: '#/components/schemas/helloworld.v1.GetOpenidByCodeReply_Data'
-        helloworld.v1.GetOpenidByCodeReply_Data:
+                    $ref: '#/components/schemas/pbWxBase.GetOpenidByCodeReply_Data'
+        pbWxBase.GetOpenidByCodeReply_Data:
             type: object
             properties:
                 openid:
                     type: string
                 mobile:
                     type: string
-        helloworld.v1.UpdateOfficialAccountReply:
+        pbWxBase.UpdateOfficialAccountReply:
             type: object
             properties: {}
-        helloworld.v1.UpdateOfficialAccountRequest:
+        pbWxBase.UpdateOfficialAccountRequest:
             type: object
             properties: {}
             description: UpdateOfficialAccount 方法 修改公众号
-        helloworld.v1.WxCallbackReply:
+        pbWxBase.WxCallbackReply:
             type: object
             properties:
                 echostr:
                     type: string
+        pbWxBase.WxCallbackRequest:
+            type: object
+            properties:
+                signature:
+                    type: string
+                timestamp:
+                    type: string
+                nonce:
+                    type: string
+                echostr:
+                    type: string
+                customer:
+                    type: string
+                wxPlatform:
+                    type: string
+                appId:
+                    type: string
+                MsgType:
+                    type: string
+                    description: 消息类型
 tags:
     - name: MiniProgram
       description: '-------------- 小程序 --------------'
